# nxp-zephyr

./: CURRENT_ISSUES.md  SW-Content-Register.txt  west.yml
.github/workflows/: bsim-tests.yaml  bug_snapshot.yaml  clang.yaml  codecov.yaml  codeql.yml  compliance.yml  daily_test_version.yml  doc-build.yml  footprint-tracking.yml  scorecards.yml  twister.yaml
boards/nxp/frdm_rw612/: frdm_rw612.dts  frdm_rw612_common.dtsi  frdm_rw612_rw612_ns.dts  init.c
boards/nxp/mimxrt1060_evk/: mimxrt1060_evk.dtsi  mimxrt1060_evk_mimxrt1062_qspi_C.overlay
boards/nxp/mimxrt1170_evk/: mimxrt1170_evk_mimxrt1176_cm7_B.overlay
boards/nxp/rd_rw612_bga/: init.c  rd_rw612_bga.dts  rd_rw612_bga.dtsi  rd_rw612_bga.yaml  rd_rw612_bga_rw612_ethernet.dts  rd_rw612_bga_rw612_ns.dts
boards/shields/nxp_m2_wifi_bt/: Kconfig.defconfig
doc/: requirements.txt
drivers/bluetooth/hci/: Kconfig  Kconfig.nxp  hci_nxp.c  hci_nxp_setup.c
drivers/console/: Kconfig
drivers/entropy/: Kconfig  Kconfig.mcux
drivers/hwinfo/: hwinfo_rw61x.c
drivers/ieee802154/: ieee802154_mcxw.c
drivers/mbox/: CMakeLists.txt  Kconfig
drivers/pwm/: pwm_mcux_sctimer.c
drivers/wifi/nxp/: Kconfig.nxp  nxp_wifi_drv.c
dts/arm/nxp/: nxp_rw6xx_common.dtsi
dts/arm/nxp/mcx/: nxp_mcxw7x_common.dtsi
dts/arm/nxp/rw/: nxp_rw6xx_common.dtsi
dts/bindings/bluetooth/: nxp,bt-hci-uart.yaml
dts/bindings/wifi/: nxp,wifi.yaml
include/zephyr/bluetooth/: conn.h
include/zephyr/net/: wifi.h  wifi_mgmt.h
modules/hal_nxp/mcux/: Kconfig.mcux
modules/hal_nxp/mcux/mcux-sdk-ng/: CMakeLists.txt
modules/hostap/: CMakeLists.txt  Kconfig
modules/hostap/src/: supp_api.c  supp_api.h  supp_events.c  supp_main.c
modules/mbedtls/: Kconfig.tf-psa-crypto
modules/trusted-firmware-m/: CMakeLists.txt  Kconfig.tfm
samples/bluetooth/a2dp_source/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/bluetooth/a2dp_source/src/: a2dp_pl_media_48KHz.h  app_connect.c  app_connect.h  app_discover.c  app_shell.c  main.c  main.h
samples/tfm_integration/psa_protected_storage/: sample.yaml
samples/tfm_integration/tfm_ipc/: sample.yaml
samples/tfm_integration/tfm_psa_test/: sample.yaml
samples/tfm_integration/tfm_regression_test/: sample.yaml
soc/nxp/imxrt/imxrt118x/: soc.c  (+1 more)
soc/nxp/rw/: CMakeLists.txt  Kconfig.defconfig  ble_els_pkc_mbedtls_psa_config.h  pmu.c  pmu.h  power.c  soc.c  soc.h
subsys/bluetooth/host/: Kconfig.l2cap  hci_core.c  smp.c
subsys/bluetooth/shell/: bt.c
subsys/net/ip/: ipv6.c
subsys/random/: Kconfig
tests/crypto/mbedtls_psa/: prj.conf
(+18 files in other folders)
